deploy instructions in readme

--- a/README
+++ b/README
@@ -1,1 +1,6 @@
 GAE static webpage for www.roguehacklab.com.
+
+To deploy, you'll have to install the google app engine SDK, possibly mess
+about with the 'deploy' script, and then run ./deploy. You'll be prompted
+for a google account username/password, and if it has write access to the
+rhl GAE app, it should "just work" :)
